2009-10-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpModuleHooks.cmake: simplifying and documenting
	the YARP device compilation process

	* example/swig/yarp.i: make callback support via directors
	apply to all wrappers, not just python wrappers

2009-10-01  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: add findPath
	method for finding directories.

2009-09-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/src/SubscriberOnSql.cpp: define F_OK if needed
	(thanks Philipp Robbel)
	
	* src/yarpserver/src/TripleSourceCreator.cpp: define F_OK if needed
	(thanks Philipp Robbel)

	* src/yarpserver/sqlite/sqlite3.c: move variable declaration
	where strict C compilation is happy (thanks Philipp Robbel)

2009-09-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/SocketTwoWayStream.h: more
	aggressive port interruption to make Windows happy.

	* src/libYARP_OS/src/Companion.cpp: make "yarp rpc" behave
	better when target disappears.

2009-09-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: freeze YARP version 2.2.4. Acknowledge
	committers found in svn logs that don't have ChangeLog entries:
	Giorgio Metta, Ugo Pattacini, Francesco Nori

2009-09-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: enable callbacks for "BottleCallback" 
	(yarp::os::TypedReaderCallback<yarp::os::Bottle>) class in python.

2009-09-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/src/TripleSourceCreator.cpp: make caution level
	for database flushes an option.

	* src/yarpserver/CMakeLists.txt: add install target for
	library associated with new name server (thanks Alexis
	Maldonado)

	* src/libYARP_OS/src/Module.cpp: change getName() to avoid an
	extra "/" character being inserted if new ROBOTCUB naming
	guidelines are followed.

	* src/libYARP_OS/src/RFModule.cpp: change getName() to avoid an